FIX:Input Fields are cut off on Login and Signup forms on smaller screens

--- a/client/styles/components/_forms.scss
+++ b/client/styles/components/_forms.scss
@@ -71,6 +71,11 @@
     max-width: 100%;
     width: 100%;
   }
+
+  @media (max-width: 360px) {
+    min-width: 100%;
+    width: 100%;
+  }
 }
 
 .form__eye__icon {
@@ -79,6 +84,10 @@
   top: 7px;
   right: -355px;
   margin-left: -40px;
+
+  @media (max-width: 360px) {
+    right: -200px;
+  }
 }
 
 
